Layout bug fix

--- a/frontend/src/less/app.less
+++ b/frontend/src/less/app.less
@@ -16,6 +16,7 @@
 
 .tvshow-content {
   height: 70%;
+  overflow: hidden;
 
   @media @min350 and @max768 {
     height: 78%;
